# templateProject

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cocos2dx/cpp/: AppActivity.java  CocosApplication.java
app/src/main/java/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxBitmap.java  Cocos2dxEditBox.java  Cocos2dxEditBoxHelper.java  Cocos2dxEngineDataManager.java  Cocos2dxHelper.java  Cocos2dxSound.java  Cocos2dxTextInputWrapper.java  Cocos2dxVideoHelper.java  Cocos2dxVideoView.java  Cocos2dxWebViewHelper.java
app/src/main/jni/: AppDelegate.cpp  CMakeLists.txt  HelloWorldScene.cpp  HelloWorldScene.h  StartScene.cpp  StartScene.h
gradle/wrapper/: gradle-wrapper.properties
